Squashed and rebased onto 1.21.1 main