@@ -6,14 +6,15 @@ import dev.emi.emi.api.render.EmiTexture;
 import dev.emi.emi.api.stack.EmiIngredient;
 import dev.emi.emi.api.stack.EmiStack;
 import dev.emi.emi.api.widget.WidgetHolder;
+import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.Blocks;
 import org.jetbrains.annotations.Nullable;
 import twilightforest.TwilightForestMod;
 import twilightforest.compat.RecipeViewerConstants;
-import twilightforest.compat.emi.EmiItemEntityWidget;
-import twilightforest.compat.emi.TFEmiCompat;
+import twilightforest.compat.emi.TFEmiCategories;
+import twilightforest.compat.emi.widget.EmiItemEntityWidget;
 
 import java.util.List;
 
@@ -21,10 +22,6 @@ public class EmiCrumbleHornRecipe implements EmiRecipe {
 	private static final int WIDTH = RecipeViewerConstants.GENERIC_RECIPE_WIDTH;
 	//height is adjusted slightly to allow 2 entries per page
 	private static final int HEIGHT = RecipeViewerConstants.GENERIC_RECIPE_HEIGHT - 8;
-
-	public static final ResourceLocation TEXTURES = TwilightForestMod.getGuiTexture("crumble_horn_jei.png");
-	public static final EmiTexture BACKGROUND = new EmiTexture(TEXTURES, 0, 4, WIDTH, HEIGHT);
-	public static final EmiTexture SLOT = new EmiTexture(TEXTURES, 116, 0, 26, 26);
 
 	private final Block input;
 	private final Block output;
@@ -36,12 +33,12 @@ public class EmiCrumbleHornRecipe implements EmiRecipe {
 
 	@Override
 	public EmiRecipeCategory getCategory() {
-		return TFEmiCompat.CRUMBLE_HORN;
+		return TFEmiCategories.CRUMBLE_HORN;
 	}
 
 	@Override
 	public @Nullable ResourceLocation getId() {
-		return null;
+		return TwilightForestMod.prefix("/crumbling/" + BuiltInRegistries.BLOCK.getKey(this.input).getNamespace() + "/" + BuiltInRegistries.BLOCK.getKey(this.input).getPath());
 	}
 
 	@Override
@@ -66,12 +63,12 @@ public class EmiCrumbleHornRecipe implements EmiRecipe {
 
 	@Override
 	public void addWidgets(WidgetHolder widgets) {
-		widgets.addTexture(BACKGROUND, 0, 0);
-		widgets.addSlot(this.getInputs().get(0), 14, 10).large(true).drawBack(false);
+		widgets.addTexture(EmiTexture.EMPTY_ARROW, 44, 15);
 		if (this.output != Blocks.AIR) {
-			widgets.addTexture(SLOT, 76, 10);
-			widgets.addSlot(this.getOutputs().get(0), 76, 10).large(true).drawBack(false);
+			widgets.addSlot(this.getInputs().getFirst(), 14, 14);
+			widgets.addSlot(this.getOutputs().getFirst(), 76, 10).large(true).recipeContext(this);
 		} else {
+			widgets.addSlot(this.getInputs().getFirst(), 14, 14).recipeContext(this);
 			widgets.add(new EmiItemEntityWidget(this.input, 76, 10));
 		}
 	}
